# building-register

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Procfile  README.md  app.json  humans.txt  manage.py  pyproject.toml
buildingregister/: asgi.py  auth.py  urls.py  wsgi.py
buildingregister/settings/: __init__.py
buildingregister/settings/common/: base.py  django_q.py  i18n.py  logging.py  o365_client.py  sentry.py  slack.py  twilio_client.py  views.py
buildingregister/settings/development/: database.py  environment.py  security.py
buildingregister/settings/production/: environment.py  security.py
extras/qr-generator/: main.py  pyproject.toml
materialize/: apps.py
materialize/templatetags/: material_forms.py
register/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py
register/management/commands/: clean-old-records.py  send-reminders.py  stats.py  visits.py
register/migrations/: 0004_longlivedtoken.py  0005_usersettings.py  0006_auto_20230427_0842.py
register/static/css/: forkongithub.css  main.css
register/templates/register/: index.html
register/util/: auth.py  tablib.py
register/util/signals/: slack.py
register/util/tokens/: __init__.py  abstract_service.py  development_console.py  office365_email.py  resolver.py  twilio_sms.py
register/views/: api.py  auth.py  index.py  profile.py  report.py
templates/: base.html
