[tool.poetry]
name = "building-register"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>", "Matthew Pugh <matthew.pugh@socialfinance.org.uk"]

[tool.poetry.dependencies]
python = ">=3.9,<4"
Django = "^4.2.21"
twilio = "^9.4.1"
django-split-settings = "^1.3.2"
python-dotenv = "^0.19.1"
django-ipware = "^4.0.0"
django-heroku = "^0.3.1"
gunicorn = "^23.0.0"
msgraphy = "^0.2.1"
slack-sdk = "^3.34.0"
sentry-sdk = "^2.19.2"
django-q = {extras = ["sentry"], version = "^1.3.9"}
croniter = "^1.0.15"
tablib = {extras = ["xlsx", "cli"], version = "^3.2.1"}
django-extensions = "^3.2.3"
setuptools = "^75.6.0"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
extend-exclude = '''.*/migrations/.*'''

[tool.isort]
profile = "black"
extend_skip = ["migrations"]
