[tool.poetry]
name = "qr-generator"
version = "0.1.0"
description = ""
authors = ["Kaj Siebert <kaj@k-si.com>", "Matthew Pugh <matthew.pugh@socialfinance.org.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
qrcode = "^8.0"
Pillow = "^11.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
